supervisor pages framework

--- a/src/main/webapp/WEB-INF/html/s_productList.html
+++ b/src/main/webapp/WEB-INF/html/s_productList.html
@@ -53,31 +53,28 @@
   <li>
    <dl>
     <dt>订单信息</dt>
-    <dd><a href="supervisor_orderOn.html">所有未处理订单</a></dd>
-    <dd><a href="supervisor_orderOff.html">所有已处理订单</a></dd>
+    <dd><a href="s_orderOn.html">所有未处理订单</a></dd>
+    <dd><a href="s_orderOff.html">所有已处理订单</a></dd>
    </dl>
   </li>
    <li>
    <dl>
     <dt>商品信息</dt>
     <!--当前链接则添加class:active-->
-    <dd><a href="#" class="active">商品列表</a></dd>
-    <dd><a href="#">商品分类</a></dd>
+    <dd><a href="s_productList.html" class="active">商品列表</a></dd>
+    <dd><a href="s_productCatalog.html">商品分类</a></dd>
    </dl>
   </li>
   <li>
    <dl>
     <dt>会员管理</dt>
-    <dd><a href="#">会员列表</a></dd>
-    <dd><a href="#">添加会员</a></dd>
-    <dd><a href="#">会员等级</a></dd>
-    <dd><a href="#">资金管理</a></dd>
+    <dd><a href="s_userManage.html">会员中心</a></dd>
    </dl>
   </li>
   <li>
    <dl>
     <dt>账号管理</dt>
-    <dd><a href="#">账号管理</a></dd>
+    <dd><a href="s_vendorManage.html">账号管理</a></dd>
    </dl>
   </li>
   <li>
