vendor management pages framework implemented

--- a/src/main/webapp/WEB-INF/html/v_bindWeixin.html
+++ b/src/main/webapp/WEB-INF/html/v_bindWeixin.html
@@ -154,30 +154,31 @@
      <!--结束：弹出框效果-->
 
      <!-- 搜索 -->
-     <section style="text-align:right">
-      <div class="btm_btn">
-        <input type="button" id="showPopTxt" value="添加礼品" class="input_btn trueBtn"/>
-       </div>
+     <section style="text-align:center">
+        
+       
+        <label class="uploadImg">
+         <input type="file"/>
+         <span>微信图片</span>
+        </label>
+         <span class="item_name" style="width:120px;">立即绑定个人微信号接收订单!
+        扫描左侧二维码实现绑定微信号后，可接收订单信息</span>
      </section><br/>
 
      <section>
+      绑定列表
       <table class="table">
        <tr>
-        <th>缩略图</th>
-        <th>名称</th>
-        <th>兑换积分</th>
-        <th>礼品数量</th>
-        <th>已兑换</th>
+        <th>微信昵称</th>
+        <th>微信号</th>
         <th>操作</th>
        </tr>
        <tr>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
         <td style="text-align:center">
-           <button class="linkStyle">什么操作</button>
+           <button class="linkStyle">启/停用</button>|
+           <button class="linkStyle">删除</button>
         </td>
        </tr>
       </table>
