--- a/src/main/webapp/WEB-INF/html/v_promotionManage.html
+++ b/src/main/webapp/WEB-INF/html/v_promotionManage.html
@@ -153,45 +153,31 @@
      </section>
      <!--结束：弹出框效果-->
 
-     <!-- 搜索 -->
-     <section style="text-align:right">
-      <div class="btm_btn">
-        <input type="button" id="showPopTxt" value="添加礼品" class="input_btn trueBtn"/>
-       </div>
-     </section><br/>
-
      <section>
-      <table class="table">
-       <tr>
-        <th>缩略图</th>
-        <th>名称</th>
-        <th>兑换积分</th>
-        <th>礼品数量</th>
-        <th>已兑换</th>
-        <th>操作</th>
-       </tr>
-       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td style="text-align:center">
-           <button class="linkStyle">什么操作</button>
-        </td>
-       </tr>
-      </table>
-      <aside class="paging">
-       <a>第一页</a>
-       <a>1</a>
-       <a>2</a>
-       <a>3</a>
-       <a>…</a>
-       <a>1004</a>
-       <a>最后一页</a>
-      </aside>
-     </section>
-
+        <ul class="ulColumn2">
+         <li>
+          <span class="item_name" style="width:120px;">主推产品：</span>
+          <input type="text" class="textbox textbox_295" placeholder="商品详情连接"/>
+         </li>
+         <li>
+          <span class="item_name" style="width:120px;">商品分类：</span>
+          <label class="single_selection"><input type="radio" name="name"/>食材</label>
+          <label class="single_selection"><input type="radio" name="name"/>零食</label>
+          <label class="single_selection"><input type="radio" name="name"/>省钱</label>
+         </li>
+         <li>
+          <span class="item_name" style="width:120px;">缩略图：</span>
+          <label class="uploadImg">
+           <input type="file"/>
+           <span>上传图片</span>
+          </label>
+         </li>
+         <li>
+          <span class="item_name" style="width:120px;"></span>
+          <input type="submit" class="link_btn"/>
+         </li>
+        </ul>
+       </section>
      </section>
     <!--结束：以下内容则可删除，仅为素材引用参考-->
  </div>
