--- a/src/main/webapp/WEB-INF/html/s_productList.html
+++ b/src/main/webapp/WEB-INF/html/s_productList.html
@@ -5,6 +5,7 @@
 <title>超级管理员系统</title>
 <meta name="author" content="DeathGhost" />
 <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+<style type="text/css">td{text-align: center;}</style>
 <!--[if lt IE 9]>
 <script src="static/js/html5.js"></script>
 <![endif]-->
