--- a/src/main/webapp/WEB-INF/html/v_orderOn.html
+++ b/src/main/webapp/WEB-INF/html/v_orderOn.html
@@ -50,30 +50,29 @@
   <li>
    <dl>
     <dt>订单信息</dt>
-    <dd><a href="#">未处理订单</a></dd>
-    <dd><a href="#">已处理订单</a></dd>
-    <dd><a href="#">未支付订单</a></dd>
-    <dd><a href="#">绑定微信号</a></dd>
+    <dd><a href="v_orderOn.html">未处理订单</a></dd>
+    <dd><a href="v_orderOff.html">已处理订单</a></dd>
+    <!-- <dd><a href="#">未支付订单</a></dd> -->
+    <!-- <dd><a href="#">绑定微信号</a></dd> -->
    </dl>
   </li>
    <li>
    <dl>
     <dt>商品信息</dt>
     <!--当前链接则添加class:active-->
-    <dd><a href="#" class="active">商品列表</a></dd>
-    <dd><a href="#">商品添加</a></dd>
-    <dd><a href="#">商品管理</a></dd>
-    <dd><a href="#">分类管理</a></dd>
-    <dd><a href="#">综合配置</a></dd>
+    <dd><a href="v_productAdd.html">商品添加</a></dd>
+    <dd><a href="v_productManage.html" class="active">商品管理</a></dd>
+    <dd><a href="v_productCatalog.html">分类管理</a></dd>
+    <dd><a href="v_promotionManage.html">综合配置</a></dd>
    </dl>
   </li>
   <li>
    <dl>
     <dt>会员管理</dt>
-    <dd><a href="#">数据管理</a></dd>
+    <dd><a href="v_dataManage.html">数据管理</a></dd>
     <dd><a href="#">优惠券配置</a></dd>
-    <dd><a href="#">礼品配置</a></dd>
-    <dd><a href="#">绑定微信号</a></dd>
+    <dd><a href="v_giftManage.html">礼品配置</a></dd>
+    <dd><a href="v_bindWeixin.html">绑定微信号</a></dd>
    </dl>
   </li>
   <li>
