--- a/src/main/webapp/WEB-INF/html/s_login.html
+++ b/src/main/webapp/WEB-INF/html/s_login.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8"/>
 <title>后台登录</title>
 <meta name="author" content="DeathGhost" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="static/css/style.css" />
 <style>
 body{height:100%;background:#16a085;overflow:hidden;}
 canvas{z-index:-1;position:absolute;}
 </style>
-<script src="js/jquery.js"></script>
-<script src="js/verificationNumbers.js"></script>
-<script src="js/Particleground.js"></script>
+<script src="static/js/jquery.js"></script>
+<script src="static/js/verificationNumbers.js"></script>
+<script src="static/js/Particleground.js"></script>
 <script>
 $(document).ready(function() {
   //粒子背景特效
@@ -23,7 +23,21 @@ $(document).ready(function() {
   createCode();
   //测试提交，对接程序删除即可
   $(".submit_btn").click(function(){
-	  location.href="index.html";
+	  /* location.href="index.html"; */
+		  $.ajax({
+	          type: "POST",
+	          contentType: "application/json",
+	          url: "supervisor/login",
+	          data: JSON.stringify({"userName":$("#userName").val(),"password":$("#password").val()}),
+	          dataType: "json",
+	          success: function(data){
+	                  if(data.msg=="登录成功"){
+	                	  console.log(data.id);
+	                	  alert(data.id);
+	                	  window.location="supervisor/"+data.id+"?token="+data.token;
+	                  }
+	          }
+	      });
 	  });
 });
 </script>
@@ -35,10 +49,10 @@ $(document).ready(function() {
   <em>Management System</em>
  </dt>
  <dd class="user_icon">
-  <input type="text" placeholder="账号" class="login_txtbx"/>
+  <input id="userName" type="text" placeholder="账号" class="login_txtbx"/>
  </dd>
  <dd class="pwd_icon">
-  <input type="password" placeholder="密码" class="login_txtbx"/>
+  <input id="password" type="password" placeholder="密码" class="login_txtbx"/>
  </dd>
  <dd class="val_icon">
   <div class="checkcode">
@@ -51,8 +65,8 @@ $(document).ready(function() {
   <input type="button" value="立即登陆" class="submit_btn"/>
  </dd>
  <dd>
-  <p>© 2015-2016 DeathGhost 版权所有</p>
-  <p>陕B2-20080224-1</p>
+  <p>© 2015-2016 优格信息 版权所有</p>
+  <p>021-34938353</p>
  </dd>
 </dl>
 </body>
