--- a/src/main/webapp/WEB-INF/html/s_productList.html
+++ b/src/main/webapp/WEB-INF/html/s_productList.html
@@ -173,7 +173,7 @@
        <option>食材</option>
       </select>
       <input type="button" value="搜索" class="group_btn"/>
-      <a href="#" style="margin-left: 30px">添加商品</a>
+      <a href="s_productAdd.html" style="margin-left: 30px">添加商品</a>
      </section><br/>
 
      <section>
